<resources>
    <string name="app_name">Books</string>
    <string name="categoria1">Scelti per te</string>
    <string name="per_te">Per te</string>
    <string name="shop">Negozio</string>
    <string name="download">Download</string>
    <string name="books">Books</string>
    <string name="titolo">Titolo</string>
    <string name="autore">Autore</string>
    <string name="genere">Genere</string>
    <string name="nomecommento">NomeCommento</string>
    <string name="commento">Commento</string>
    <string name="nomeutente">NomeUtente</string>
    <string name="descrizione">Descrizione</string>
    <string name="scan">scansiona</string>
    <string name="acquista">Acquista</string>
    <string name="trama">Trama</string>
    <string name="todo">TODO</string>
    <string name="altre_info">Continua</string>
    <string name="background">background</string>
    <string name="riduci">Riduci</string>
    <string name="foto_autore">Foto Autore</string>
    <string name="freccia">freccia</string>
    <string name="pulsantechiusura">pulsantechiusura</string>
    <string name="nome_commento">Nome commento:</string>
    <string name="commentobox">Commento:</string>
    <string name="annulla">Annulla</string>
    <string name="pubblica">Pubblica</string>
    <string name="aggiungi_un_commento">Aggiungi un commento</string>
    <string name="pulsante_uscita">pulsante_uscita</string>
    <string name="sfocatura">Sfocatura</string>
    <string name="potrebbero_interessarti_dell_autore">Altri dell\' autore</string>
    <string name="info_sull_autore">Info sull\'Autore</string>
    <string name="cerca">Cerca</string>
    <string name="divider">Divider</string>
</resources>
