<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_perte"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        android:title="@string/per_te"/>

    <item
        android:id="@+id/navigation_download"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:title="@string/download"/>

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:title="@string/shop"/>

</menu>